<resources>
    <string name="app_name">TidBits</string>
    <string name="greet_user">Hi, Bob!</string>
    <string name="selection_question">What Do You Want To Learn Today?</string>
    <string name="math">Math</string>
    <string name="geography">Geography</string>
    <string name="languages">Languages</string>
    <string name="mathematics">Mathematics</string>
    <string name="welcome_login">Welcome Back!</string>
    <string name="enter_email_text">Enter your email</string>
    <string name="enter_password_text">Enter your password</string>
    <string name="login_text">Login</string>
    <string name="registration_question">Are you new to TidBits?</string>
    <string name="register_here_text">Tap here to Register a new account.</string>
    <string name="welcome_registration">Welcome To The Fun Learning App!</string>
    <string name="confirm_password_text">Confirm your password</string>
    <string name="registration_text">Register Account</string>
    <string name="account_question">Already have a TidBits account?</string>
    <string name="login_here_text">Tap here to go to the Login Page.</string>
    <string name="level">Level: </string>
    <string name="level_plain">Level</string>
    <string name="user_switcher_title">Select a Kid</string>
    <string name="user_switcher_manage_user">Manage Kids</string>
    <string name="placeholder_name">firstName</string>
    <string name="app_logo">app logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="about_message">Tidbits App v.0.00</string>
    <string name="close_dialog">Close</string>
    <string name="your_kids">Your Kids</string>
    <string name="add_new_child">Add a New Child</string>
    <string name="age">Age: </string>
    <string name="lets_play">Let\'s Play!</string>
    <string name="home">Home</string>
    <string name="switch_user">Switch User</string>
    <string name="authors">Authors:\nAleks Neceski\nBrijeshkumar Patel\nDhavani Patel\nHussain Phalasiya\nNicholas Chu</string>
    <string name="first_name">First Name:</string>
    <string name="birthday">Birthday:</string>
    <string name="profile_picture">Profile Picture:</string>
    <string name="create">Create</string>
    <string name="photo_permission">TidBits needs your permission to access the camera roll.</string>
    <string name="change">Change</string>
    <string name="birthday_hint">YYYY-MM-DD</string>
    <string name="edit_child_details">Edit Child Details</string>
    <string name="child_id">Child Id:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="login_email">Login Email:</string>
    <string name="placeholder_email">email@email.com</string>
    <string name="log_out">Log Out</string>
    <string name="number_of_kids_registered">Kid(s) Registered:</string>
    <string name="placeholder_number_of_kids">placeholder {0}</string>
    <string name="placeholder_subject">Subject</string>
    <string name="last_playtime">Last Played:</string>
    <string name="spelling">Spelling</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="no_email_pass_error">Enter Email and Password</string>
    <string name="no_email_error">Please Enter Email</string>
    <string name="no_pass_error">Please Enter Password</string>
    <string name="no_con_pass_error">Please Confirm Password</string>
    <string name="registered">You are registered!!!</string>
    <string name="registration_error">Registration Failed</string>
    <string name="pass_mismatch">Password Mismatch</string>
    <string name="logged_in">Login Successful</string>
    <string name="login_error">Login Failed</string>
    <string name="not_available">Not Available.</string>
    <string name="close">Close</string>
    <string name="correct_answer">Correct!</string>
    <string name="next_question">Next</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_message">Congratulations! You passed Level </string>
</resources>