<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:orderInCategory="101"
        android:id="@+id/group_one">
        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
    </group>

    <group
        android:orderInCategory="104"
        android:id="@+id/group_two">
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/navigation_item_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help"/>
        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"/>
    </group>

</menu>