<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:id="@+id/topBar"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F62293"
        android:backgroundTintMode="src_over"
        android:layout_gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewChildDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_child_details"
        android:fontFamily="@font/chewy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        android:textColor="@color/pink"
        android:gravity="center"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewChildDetails"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewFirstName"/>

    <TextView
        android:id="@+id/textViewBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name"/>

    <EditText
        android:id="@+id/birthday_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:clickable="false"
        android:hint="@string/birthday_hint"
        app:layout_constraintTop_toBottomOf="@id/textViewBirthday"/>

    <TextView
        android:id="@+id/textViewChildId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_id"
        android:layout_marginLeft="10dp"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_picker"/>

    <EditText
        android:id="@+id/childId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:clickable="false"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/textViewChildId"/>

    <TextView
        android:id="@+id/textViewLastPlaytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_playtime"
        android:layout_marginLeft="10dp"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/childId"/>

    <EditText
        android:id="@+id/lastPlaytime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:clickable="false"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastPlaytime" />

    <TextView
        android:id="@+id/textViewProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastPlaytime"/>

    <LinearLayout
        android:id="@+id/profile_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewProfilePicture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="2dp"
        android:background="@color/light_grey">
        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/giraffe"
            android:background="@color/background"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/pink"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/pink"
            android:layout_margin="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>